# kimoVPN

./: .gitignore  README.md  plan.md  pyproject.toml
certs/: README.md
data/: users.json
scripts/: generate_certs.py  test_connection.py  test_packet_echo.py  test_simple_echo.py  test_web_ui.py
src/: __init__.py
src/client/: __init__.py  config.py  connection.py  main.py  packet_handler.py  tun_interface.py
src/client/web_ui/: app.py
src/client/web_ui/templates/: index.html
src/common/: __init__.py  crypto.py  ip_packet.py  logging.py  metrics.py  models.py  packet.py  protocol.py
src/server/: __init__.py  auth.py  ip_pool.py  main.py  packet_handler.py  packet_router.py  server.py  tun_interface.py
tests/: test_packet_handling.py  test_tun_interface.py
