[project]
name = "kimovpn"
version = "0.1.0"
description = "KimoVPN automation project"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pynacl>=1.5.0",            # cryptography using libsodium
    "flask>=3.0.0",             # web UI framework
    "flask-socketio>=5.3.0",    # real-time websocket updates
    "python-socketio>=5.11.0",  # socketIO backend
    "passlib[bcrypt]>=1.7.4",   # password hashing with bcrypt
    "pydantic>=2.0.0",          # data validation
    "pydantic-settings>=2.0.0", # settings management
    "structlog>=24.0.0",        # structured logging
    "cryptography>=41.0.0",     # for certificate generation
    "pyinstaller>=6.0.0",       # windows executable packaging
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]